# ase

./: .flake8  .gitlab-ci.yml  README.rst  appveyor.yml  mypy.ini  pyproject.toml  setup.py
.gitlab/issue_templates/: Default.md
.gitlab/merge_request_templates/: Default.md
ase/: __init__.py  atom.py  atoms.py  autoneb.py  cell.py  codes.py  config.py  constraints.py  dependencies.py  dimer.py  dyneb.py  eos.py  filters.py  formula.py  hessian_initial.py  neb.py  neighborlist.py  nomad.py  parallel.py  phasediagram.py  phonons.py  quaternions.py  run_optimization.py  stress.py  structure.py  symbols.py  test_stress.py  thermochemistry.py  units.py
ase/calculators/: abc.py  abinit.py  acemolecule.py  acn.py  aims.py  amber.py  autodetect.py  bond_polarizability.py  calculator.py  castep.py  checkpoint.py  combine_mm.py  counterions.py  cp2k.py  crystal.py  demonnano.py  dftb.py  dftd3.py  dmol.py  eam.py  elk.py  emt.py  espresso.py  excitation_list.py  exciting.py  ff.py  gamess_us.py  gaussian.py  genericfileio.py  gromacs.py  gulp.py  h2morse.py  harmonic.py  lammpslib.py  lammpsrun.py  lj.py  loggingcalc.py  mixing.py  mopac.py  morse.py  (+17 more)
ase/cli/: build.py  complete.py  completion.py  convert.py  diff.py  dimensionality.py  exec.py  info.py  nebplot.py  nomadget.py  template.py  ulm.py
ase/cluster/: cluster.py  compounds.py  cubic.py  decahedron.py  factory.py  hexagonal.py  icosahedron.py  octahedron.py  util.py  wulff.py
ase/collections/: collection.py
ase/data/: __init__.py  colors.py  dbh24.py  g2_1.py  g2_2.py  pubchem.py  s22.py
ase/db/: cli.py  convert.py  core.py  jsondb.py  mysql.py  postgresql.py  project.py  row.py  sqlite.py  table.py
ase/dft/: __init__.py  band_structure.py  bandgap.py  (+9 more)
doc/: .gitignore  about.rst  conf.py  ecosystem.rst  ext.py  index.rst  install.rst  logo.py  numpy.rst  python.rst  releasenotes.rst
tools/: ase-run
(+931 files in other folders)
