[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ase"
description="Atomic Simulation Environment"
version = "3.23.0b1"
readme = "README.rst"
license = { text = "LGPLv2.1+" }
maintainers = [{ name = "ASE Community", email = "ase-users@listserv.fysik.dtu.dk" }]
classifiers = [
    "Development Status :: 6 - Mature",
    "License :: OSI Approved :: ",
    "GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics"
]
requires-python = ">=3.8"
dependencies = ["numpy>=1.18.5", "scipy>=1.4.1", "matplotlib>=3.3.4"]

[project.urls]
homepage = "https://wiki.fysik.dtu.dk/ase/"

[project.scripts]
ase = "ase.cli.main:main"

[project.optional-dependencies]
docs = ["sphinx", "sphinx_rtd_theme", "pillow"]
test = ["pytest>=6.2.5", "pytest-xdist>=2.1.0"]
spglib = ["spglib>=1.9"]

[tool.setuptools.package-data]
ase = [
    "spacegroup/spacegroup.dat",
    "collections/*.json",
    "db/templates/*",
    "db/static/*",
    "py.typed",
    "test/pytest.ini",
    "test/testdata/**",
]

[tool.pytest.ini_options]
testpaths = ["ase/test"]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = false
enable_error_code = "ignore-without-code"

[tool.coverage.run]
source = ["ase"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:"
]
